--- a/packages/commonwealth/client/scripts/views/modals/new_snapshot_proposal_modal.scss
+++ b/packages/commonwealth/client/scripts/views/modals/new_snapshot_proposal_modal.scss
@@ -1,5 +1,5 @@
 .NewSnapshotProposalModal {
   .CWModalBody {
-    margin-bottom: 32px;
+    // Removed margin-bottom as footer will handle spacing
   }
 }
